Creamos el modelo Zapatilla y lo implementamos en el component

--- a/masterJS/aprendiendo-angular/src/app/zapatillas/zapatillas.component.html
+++ b/masterJS/aprendiendo-angular/src/app/zapatillas/zapatillas.component.html
@@ -1,1 +1,6 @@
-<p>zapatillas works!</p>
+<h2>{{titulo}}</h2>
+<ul>
+    <li *ngFor="let deportiva of zapatillas">
+      {{deportiva.nombre}} - <strong>{{deportiva.precio}}</strong>
+    </li>
+</ul>
