--- a/masterJS/aprendiendo-angular/src/app/zapatillas/zapatillas.component.html
+++ b/masterJS/aprendiendo-angular/src/app/zapatillas/zapatillas.component.html
@@ -2,6 +2,8 @@
 <ul>
     <li *ngFor="let deportiva of zapatillas">
       {{deportiva.nombre}} - <strong>{{deportiva.precio}}</strong>
-      <span *ngIf="deportiva.precio<=80"> ¡EN OFERTA! </span>
+      <span *ngIf="deportiva.precio<=80"
+      [style.background]="deportiva.precio<=80 ? 'green' : 'transparent'"
+      [style.color]="deportiva.precio<=80 ? 'white' : 'black'"  >¡EN OFERTA!</span>
     </li>
 </ul>
