Implementamos directiva ngFor

--- a/masterJS/aprendiendo-angular/src/app/zapatillas/zapatillas.component.html
+++ b/masterJS/aprendiendo-angular/src/app/zapatillas/zapatillas.component.html
@@ -1,7 +1,13 @@
 <h2>{{titulo}}</h2>
+<p>Compra las zapatillas de las mejores marcas.</p>
+<ul>
+  <li *ngFor="let marca of marcas">{{ marca }}</li>
+</ul>
+<p>LAs zapatillas que están disponibles son:</p>
 <ul>
     <li *ngFor="let deportiva of zapatillas">
-      {{deportiva.nombre}} - <strong>{{deportiva.precio}}</strong>
+     <span [ngStyle]="{'text-decoration': !deportiva.stock ? 'line-throught' : 'none'}">
+      {{deportiva.nombre}} - <strong>{{deportiva.precio}}</strong></span>
       <span *ngIf="deportiva.precio<=80"
       [style.background]="deportiva.precio<=80 ? 'green' : 'transparent'"
       [style.color]="deportiva.precio<=80 ? 'white' : 'black'"  >¡EN OFERTA!</span>
